# smart-pantry

./: .gitignore  Procfile  README.md  pyproject.toml
smart_pantry/: app.py
smart_pantry/models/: __init__.py  base_model.py  product.py  unit_of_measure.py
smart_pantry/models/mixins/: __init__.py
smart_pantry/schemas/: __init__.py  product.py  unit_of_measure.py
smart_pantry/services/: product.py  unit_of_measure.py
tests/: conftest.py  test_smart_pantry.py
tests/models/: test_product.py  test_unit_of_measure.py
tests/resources/: test_products_resource.py  test_units_of_measure_resource.py
tests/schemas/: test_product_schema.py  test_unit_of_measure_schema.py
tests/services/: test_product_service.py
